# MMI

./: Cargo.toml  LICENSE  README.md
src/: cleaner.rs  cli.rs  history.rs  hook.rs  main.rs  patterns.rs  vw.rs
tests/: integration.rs
