[package]
name = "mmi"
version = "0.1.0"
edition = "2021"
description = "Me, Myself and I — strip AI trails from your git commits"
license = "MIT"
repository = "https://github.com/bugthesystem/mmi"

[[bin]]
name = "mmi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
